--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -163,19 +163,19 @@ outputs:
         - llvm-tools-19    # [not win]
         - clang 19.*       # [win]
         - llvm-tools 19.*  # [win]
-        - bzip2          # [build_platform != target_platform]
-        - libsqlite      # [build_platform != target_platform]
-        - liblzma-devel  # [build_platform != target_platform]
-        - zlib           # [build_platform != target_platform]
-        - zstd           # [build_platform != target_platform]
-        - openssl        # [build_platform != target_platform]
-        - readline       # [not win and build_platform != target_platform]
-        - tk             # [build_platform != target_platform]
-        - ncurses        # [unix and build_platform != target_platform]
-        - libffi         # [build_platform != target_platform]
-        - libuuid        # [linux and build_platform != target_platform]
-        - libxcrypt      # [linux and build_platform != target_platform]
-        - expat          # [build_platform != target_platform]
+        - bzip2            # [build_platform != target_platform]
+        - libsqlite        # [build_platform != target_platform]
+        - liblzma-devel    # [build_platform != target_platform]
+        - zlib             # [build_platform != target_platform]
+        - zstd             # [build_platform != target_platform]
+        - openssl          # [build_platform != target_platform]
+        - readline         # [not win and build_platform != target_platform]
+        - tk               # [build_platform != target_platform]
+        - ncurses          # [unix and build_platform != target_platform]
+        - libffi           # [build_platform != target_platform]
+        - libuuid          # [linux and build_platform != target_platform]
+        - libmpdec-devel   # [build_platform != target_platform]
+        - expat            # [build_platform != target_platform]
       host:
         - bzip2
         - libsqlite
