--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -307,6 +307,7 @@ outputs:
       requires:
         - {{ stdlib('c') }}
         - {{ compiler('c') }}
+        - ripgrep
       commands:
         - VER=${PKG_VERSION%.*}    # [not win]
         - VERABI=${VER}            # [not win]
